# dorsal

./: Cargo.toml  README.md  justfile
dorsal_example/: .gitignore  Cargo.toml  README.md  justfile  package.json  static_build.ts  tsconfig.json
dorsal_example/src/: db.rs  main.rs
dorsal_example/src/api/: auth.rs
dorsal_example/src/pages/: base.rs  home.rs  mod.rs
dorsal_example/static/: style.css
dorsal_example/static/ts/pages/: Footer.ts
dorsal_example/templates/: base.html  homepage.html
src/: lib.rs
src/db/: cachedb.rs  db.rs  mod.rs  sql.rs
src/db/special/: auth_db.rs  log_db.rs  mod.rs  notification_db.rs
