workspace = { members = ["dorsal_example"] }
[package]
name = "dorsal"
authors = ["hkau"]
license = "MIT"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
postgres = []
mysql = []
sqlite = []
default = []

[dependencies]
hex_fmt = "0.3.0"
redis = "0.25.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = [
    "sqlite",
    "postgres",
    "mysql",
    "any",
    "runtime-tokio",
    "tls-native-tls",
] }
uuid = { version = "1.8.0", features = ["v4"] }
